VERSION 0.11 (2017-10-10)
  * Detection of R installation path on Windows in registry if Rscript
     not found in PATH variable.
  * Removed -b option from rsuite install. It makes no sens as RSuite 
     is exposed as in source only version.
  * zip.exe is installed by MSI together with RSuite CLI for building 
     binary project packages on clean Windows.

VERSION 0.10 (2017-09-24)
  * Logger configuration update to properly support -v and -q options

VERSION 0.9 (2017-09-20)
  * Initial version