@@ -1,19 +1,25 @@
 @echo off
 
-Rscript --version 1> nul 2>&1
-if ERRORLEVEL 1 (
-    for /f "skip=1 tokens=2* " %%a in ('reg query HKLM\SOFTWARE\R-core\R /v InstallPath') do (
-        echo R detected at %%b. Will update PATH variable.
-        path %%~sb\bin;%PATH%
-    )
 
-    Rscript.exe --version 1> nul 2>&1
-    if ERRORLEVEL 1 (
-        echo ERROR: No R installation available. Failed to detect R path in registry.
-        echo Please install R and verify its location added PATH environment variable.
+Rscript.exe --version 1> nul 2>&1
+if ERRORLEVEL 1 (
+    for /f "skip=1 tokens=2* " %%a in ('reg query HKLM\SOFTWARE\R-core\R /v InstallPath') do set r_bin_path=%%~sb\bin
+    if "%r_bin_path%"=="" (
+        echo ERROR: Failed to detect R path in registry. R is required to use RSuite CLI.
         exit /B 1
     )
 )
+if "%r_bin_path%"=="" goto rscript_found
+path %r_bin_path%;%PATH%
+
+Rscript.exe --version 1> nul 2>&1
+if ERRORLEVEL 1 (
+    echo ERROR: No R installation available. Invalid registry entry for R installation path detected.
+    echo Please install R and verify its location added PATH environment variable.
+    exit /B 1
+)
+
+:rscript_found
 
 set base_dir=%~dp0
 set cmd="%1"
